| Bug #47831 | Incorrect error handling in Dbtc-scan | ||
|---|---|---|---|
| Submitted: | 5 Oct 2009 12:36 | Modified: | 6 Oct 2009 10:27 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-6.2 | OS: | Any |
| Assigned to: | Jonas Oreland | Target Version: | |
[5 Oct 2009 12:36]
Jonas Oreland
[5 Oct 2009 12:38]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/85725 3011 Jonas Oreland 2009-10-05 ndb - bug#47831 - fix scan error handling in Dbtc, wrt lists
[5 Oct 2009 12:48]
Bugs System
Pushed into 5.1.39-ndb-7.0.9 (revid:jonas@mysql.com-20091005104514-dn3zkfju74vb2s3w) (version source revid:jonas@mysql.com-20091005104514-dn3zkfju74vb2s3w) (merge vers: 5.1.39-ndb-7.0.9) (pib:11)
[5 Oct 2009 12:48]
Bugs System
Pushed into 5.1.39-ndb-7.1.0 (revid:jonas@mysql.com-20091005104837-v2wgz1f7lvvm3p3k) (version source revid:jonas@mysql.com-20091005104837-v2wgz1f7lvvm3p3k) (merge vers: 5.1.39-ndb-7.1.0) (pib:11)
[5 Oct 2009 12:50]
Bugs System
Pushed into 5.1.39-ndb-6.2.19 (revid:jonas@mysql.com-20091005103850-dwij2dojwpvf5hi6) (version source revid:jonas@mysql.com-20091005103850-dwij2dojwpvf5hi6) (merge vers: 5.1.39-ndb-6.2.19) (pib:11)
[5 Oct 2009 12:50]
Bugs System
Pushed into 5.1.39-ndb-6.3.28 (revid:jonas@mysql.com-20091005104232-3r8ihohlabhib11n) (version source revid:jonas@mysql.com-20091005104232-3r8ihohlabhib11n) (merge vers: 5.1.39-ndb-6.3.28) (pib:11)
[5 Oct 2009 12:51]
Jonas Oreland
hey, push triggers seems to work again!!
[6 Oct 2009 10:27]
Jon Stephens
Documented bugfix in the NDB-6.2.19, 6.3.28, and 7.0.9 changelogs, as follows:
Under some circumstances, when a scan encountered an error early
in processing by the DBTC kernel block, a node could crash as a
result. Such errors could be caused by applications sending
incorrect data, or, more rarely, by a DROP TABLE operation
executed in parallel with a scan.
