ndb - bug#47831 - fix scan error handling in Dbtc, wrt lists